--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-  "routes": [
-    {
-      "src": "/api",
-      "dest": "/api/index.py"
+  "functions": {
+    "api/index.py": {
+      "runtime": "python3.11"
     }
-  ]
+  }
 }
